# bindiff

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEVPLAN.md  Makefile  OPTIMIZATION_REPORT.md  PROGRESS.md  README.md  TEST_REPORT.md  profile_test.sh  test_5gb.sh  test_comprehensive.sh  test_stress.sh
.github/workflows/: build.yml
cmake/: TestDiffPatch.cmake
examples/: CMakeLists.txt  library_usage.cpp  simple_usage.cpp
include/: bindiff.hpp  types.hpp
include/compress/: compressor.hpp
include/core/: batch_processor.hpp  block_processor.hpp  diff_engine.hpp  matcher.hpp  operations.hpp  patch_engine.hpp  patch_format.hpp
include/crypto/: sha256.hpp
include/io/: file_utils.hpp  mmap_file.hpp  stream_writer.hpp
include/utils/: progress.hpp  thread_pool.hpp
src/: bindiff.cpp  main.cpp
src/compress/: lz4_compressor.cpp
src/core/: batch_processor.cpp  block_processor.cpp  diff_engine.cpp  matcher.cpp  operations.cpp  patch_engine.cpp  patch_format.cpp
src/crypto/: sha256.cpp
src/io/: file_utils.cpp  mmap_file.cpp  stream_writer.cpp
src/utils/: thread_pool.cpp
tests/: CMakeLists.txt  test_batch.cpp  test_compress.cpp  test_main.cpp  test_matcher.cpp  test_mmap.cpp  test_operations.cpp
